Fixing bug 209033, double keyDown events sent to plugins by KeyPress event, r=brade sr=bryner